[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Obstacles/WaterCurrent.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 56, 32 )

[sub_resource type="ParticlesMaterial" id=2]
resource_local_to_scene = true
trail_divisor = 4
emission_shape = 2
emission_box_extents = Vector3( 56, 32, 0 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 56, 32 )

[node name="WaterCurrent" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Particles2D" type="Particles2D" parent="."]
amount = 149
lifetime = 0.6
preprocess = 1.0
speed_scale = 4.0
process_material = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyBlocker" type="StaticBody2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBlocker"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="." to="." method="_on_WaterCurrent_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_WaterCurrent_body_exited"]
